hphp/hack/test/typecheck/dynamic_calls/dynamically_callable_soft_reified.php
<?hh

<<__DynamicallyCallable>>
function test<<<__Soft>> reify T>(): void {}
